Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108026

Memory leak when capturing a 3D scene using QQuickItem::grabImage

    XMLWordPrintable

Details

    • Windows
    • 3b619f85aa (qt/qtdeclarative/dev) 3b619f85aa (qt/tqtc-qtdeclarative/dev) 48a4e4d9f4 (qt/tqtc-qtdeclarative/6.2) 2ef4126cb0 (qt/qtdeclarative/6.4) 2ef4126cb0 (qt/tqtc-qtdeclarative/6.4)

    Description

      Building and running the attached scene3d.zip (based on qt3d/examples/qt3d/scene3d) the memory usage gradually increases.

       

      The main source of memory leaks are instances of QShaderResourceBindings.

      It is created by the Renderer::updateMaterialDynamicData function and is not freed.

      https://code.qt.io/cgit/qt/qtdeclarative.git/tree/src/quick/scenegraph/coreapi/qsgbatchrenderer.cpp?h=6.4.0#n2945

       

       

      Attachments

        For Gerrit Dashboard: QTBUG-108026
        # Subject Branch Project Status CR V

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            ayamamoto Atsushi Yamamoto
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes